added compile jar script